# hack

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Makefile  PROCEEDING_ROADMAP.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  deployment-info.json  justfile  play.ps1  rust-toolchain.toml  rustfmt.toml  test_js_syntax.html  test_terminal_fixes.html  wrangler.toml
.cargo/: config.toml
.github/: CHECKLIST.md  dependabot.yml  pull_request_template.md
benches/: challenge_benchmarks.rs  state_benchmarks.rs
docs/: ADVANCED_TESTING.md  CI_CD_PIPELINE.md  CLOUDFLARE_DEPLOYMENT.md  CONFIG_SUMMARY.md  DEPLOYMENT_V1_2_0.md  DEVELOPER_TROUBLESHOOTING.md  DEV_WORKFLOW.md  INDEX.md  JAVASCRIPT_FIX_SUMMARY.md  MIGRATION_V1_2_0.md  OSINT_CHALLENGES_SUMMARY.md  PROCEEDING_ROADMAP.md  PROJECT_SUMMARY.md  PWA_BRANDING_COMPLETE.md  PWA_FIXES_SUMMARY.md  ROADMAP.md  SCRIPTS_IMPLEMENTATION_SUMMARY.md  SETUP.md  TAB_COMPLETION_AND_TESTING_SUMMARY.md  TERMINAL_SETUP.md  TESTING.md  TESTING_STRATEGY.md  TEST_ISOLATION_AND_CICD_SUMMARY.md  TOOLS.md  V1_2_0_SUMMARY.md  V1_5_0_PLANNING.md  V1_6_0_PLANNING.md  WALKTHROUGH.md
examples/: count_challenges.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_challenge_validators.rs  fuzz_state_deserialization.rs  fuzz_state_operations.rs
scripts/: README.md  add-challenge-metadata.ps1  analyze-wasm.ps1  batch-update-challenges.ps1  build-release.ps1  build-release.sh  clean-all.ps1  clean-all.sh  deploy-production.ps1  generate-icons-svg.js  generate-icons.html  generate-icons.js  generate-pwa-assets.ps1  optimize-memory.ps1  quick-check.ps1  quick-check.sh  run-benchmarks.ps1  run-benchmarks.sh  run-fuzz.ps1  run-fuzz.sh  run-mutation-tests.ps1  run-mutation-tests.sh  screenshot-guide.html  screenshot-server.js  setup-terminal.ps1  svg-to-png-converter.js  test-coverage.ps1  test-coverage.sh  test-verbose.ps1  test-verbose.sh  test-watch.ps1  test-watch.sh  test-web.ps1  test-web.sh  test_achievement_system.py  test_osint_challenges.py  update-challenges.ps1  v1-1-0-summary.ps1  verify-ci-config.ps1  verify-terminal.ps1  (+1 more)
src/: lib.rs  (+11 more)
(+68 files in other folders)
