[package]
name = "hack_simulator"
version = "0.1.0"
edition = "2021"
authors = ["The Hack Team"]
description = "A horror-themed hacking simulator with progressive difficulty"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
rand = "0.8"
chrono = "0.4"
