[package]
name = "hack_simulator"
version = "0.1.0"
edition = "2021"
authors = ["The Hack Team"]
description = "A horror-themed hacking simulator with progressive difficulty"

[lib]
name = "hack_simulator"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["wasm-bindgen"] }

# Web-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }

# Terminal dependencies (only for native builds)
crossterm = { version = "0.29", optional = true }

[features]
default = ["native"]
native = ["crossterm"]
web = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "challenge_benchmarks"
harness = false

[[bench]]
name = "state_benchmarks"
harness = false
